--- a/after/app/java11/movies/get-movie/build.gradle
+++ b/after/app/java11/movies/get-movie/build.gradle
@@ -80,15 +80,20 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
+task buildLayerZip(type: Zip) {
+    into("java/lib") {
+        from configurations.runtimeClasspath
+    }
+    archiveFileName = "${project.name}-layer.zip"
+}
+
 task buildZip(type: Zip) {
     from compileJava
     from processResources
-    into("lib") {
-        from configurations.runtimeClasspath
-    }
     archiveFileName = "${project.name}.zip"
 }
 
+build.dependsOn buildLayerZip
 build.dependsOn buildZip
 
 test {
@@ -103,8 +108,8 @@ wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
 
-//configurations.all {
-//    resolutionStrategy {
-//        failOnVersionConflict()
-//    }
-//}
+configurations.all {
+    resolutionStrategy {
+        failOnVersionConflict()
+    }
+}
